# active-trace

./: .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  docker-compose.yml  docker-compose.yml.bak
backend/: .coverage  .env.example  .env.test  .gitignore  Dockerfile  _head_check.py  _run_migrations.ps1  _setup_db.ps1  _start_api.ps1  _start_worker.ps1  alembic.ini  pyproject.toml  tmp_alembic.ini
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: check_tables.py  check_tables_async.py  seed_dev.py  seed_full.py
backend/tests/: conftest.py  conftest_auditoria.py  test_acknowledgment_model.py  test_analisis_endpoints.py  test_analisis_service.py  test_app_startup.py  test_asignacion_repository.py  test_audit_action.py  test_audit_codes.py  test_audit_log_model.py  test_audit_log_repository.py  test_audited_decorator.py  test_auditoria_repository.py  test_auditoria_schemas.py  test_auditoria_service.py  test_auth_endpoints.py  test_auth_schemas.py  test_auth_service.py  test_aviso_endpoints.py  test_aviso_model.py  test_base_mixin.py  test_base_repository.py  test_calificacion_models.py  test_calificacion_repository.py  test_calificacion_schemas.py  test_calificacion_service.py  test_calificaciones_aislamiento.py  test_calificaciones_aprobado.py  test_calificaciones_endpoints.py  test_calificaciones_import.py  test_calificaciones_reporte_finalizacion.py  test_calificaciones_umbral.py  test_calificaciones_vaciar.py  test_coloquios.py  test_comunicacion_service.py  test_config.py  test_database.py  test_encryption.py  test_encuentro_slots.py  test_equipos.py  (+76 more)
(+681 files in other folders)
